objects/Call_Report__c.object
<CustomObject>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Offer_Interest__c</controllingField>
            <picklistValues>
                <fullName>2.1 รอตัดสินใจ/รอปรึกษาครอบครัว</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 สนใจแต่รอแก้ปัญหาเรื่องหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 สนใจแต่มีประเด็นต่อรองเกี่ยวกับดอกเบี้ย / ค่าธรรมเนียม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 สนใจแต่ไม่ใช่ในช่วงเดือนนี้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 สนใจแต่มีประเด็นต่อรองเกี่ยวกับประกันชีวิต</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6 สนใจแต่วงเงินที่เสนอไม่เพียงพอ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7 อื่น ๆ (โปรดระบุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Refer ให้ผู้อื่นดำเนินการ (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 ที่อยู่ และเบอร์โทรศัพท์ไม่ถูกต้อง / ไม่มีข้อมูล/ ติดต่อไม่ได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 เพิ่งขอสินเชื่อไม่ถึง 3 เดือน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 ลูกค้าคุณสมบัติไม่ดี / ไม่ผ่านหลักเกณฑ์ธนาคาร (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 ลูกค้าไม่ให้เข้าพบ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 เสียชีวิต / เลิกกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.7 หลักประกันไม่ผ่านเกณฑ์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.8 อื่น ๆ (โปรดระบุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 มีเงินคงเหลือในบัญชีสูงหรือวงเงินเป็นตัวดำ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 ติดเรื่องค่าใช้จ่ายในการดำเนินการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 ยอดขายกิจการลดลง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4 ตัดออกจากรายชื่อ Lead (ระยะเวลา 6 เดือน)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 ขอในนามบุคคล/บริษัทอื่น (โปรดระบุ CIS/เลขบัตรประชาชนหรือเลขทะเบียนการค้า)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.6 อื่น ๆ (โปรดระบุ)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_of_Visit_CEM__c</fullName>
        <label>Reasons of Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Occasion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(just) On Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice from Sales Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Date__c</fullName>
        <description>ใช้รวมวันที่ของ 2 ฟิลด์ โดยมีเงื่อนไขว่า ให้ใส่ค่า = วันที่เข้าพบ(Actual Visit Date) แต่ถ้าไม่มีวันที่เข้าพบ ให้ใส่ค่าเป็นวันที่นัดแทน(Plan Date)</description>
        <formula>IF ( ISBLANK(Actual_Visit_Date__c), DATEVALUE(Plan_Date__c), Actual_Visit_Date__c)</formula>
        <label>Related Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Call_Report__c</fullName>
        <formula>NOT( Primary_Call_Report__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Call Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior UW Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>UW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Plans_Call_Reports4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servicing,DPD(แก้ไขหนี้),มอบของขวัญ,ฯลฯ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Display__c</fullName>
        <formula>TEXT(Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Industry_Group_Description__c</fullName>
        <formula>Business_Code__r.Sub_Industry_Group_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Industry Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry_Group__c</fullName>
        <formula>Business_Code__r.Sub_Industry_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Industry Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Email_Address__c</fullName>
        <label>TM Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>CIS_ID__r.Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Acquantainceship_Score__c + Business_Knowledge_Score__c +  Final_Score_Score__c +   Non_Financial_Provides_Score__c + Product_Explanation_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UW_Decision__c</fullName>
        <label>UW Decision</label>
        <picklist>
            <picklistValues>
                <fullName>อยู่ระหว่างตัดสินใจ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UW_Final_Decision__c</fullName>
        <label>UW Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UW_My_Call_Plan__c</fullName>
        <formula>IF($User.Id = Senior_UW_Name__r.Id || $User.Id = Head_of_UW_Name__r.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UW: My Call Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date_Time_by_CEM_MS__c</fullName>
        <label>Updated Date/Time by CEM/MS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_by_CEM_MS_ID__c</fullName>
        <label>Updated by CEM/MS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_by_CEM_MS__c</fullName>
        <label>Updated by CEM/MS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VObj_Relation__c</fullName>
        <formula>IF  (ISPICKVAL( Visit_Objective__c , &quot;Relationship&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VObj_Relation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VObj_Sell__c</fullName>
        <formula>IF(ISPICKVAL(Visit_Objective__c,&quot;Sell&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VObj_Sell</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Objective__c</fullName>
        <label>Visit Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <formula>IF ( TEXT( Status__c ) = &quot;Cancel&quot; , &quot;9&quot; , 
IF ( AND ( Plan__c = 1 , Actual_Visit__c = 0 ) , &quot;0&quot; , 
IF ( AND ( Plan__c = 1 , Actual_Visit__c = 1 ) , &quot;1&quot; , 
IF ( AND ( Plan__c = 0 , Actual_Visit__c = 1 ) , &quot;2&quot; , &quot;99&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Plans_Call_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X26_Industries_Group__c</fullName>
        <formula>Business_Code__r.X26_Industries_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>26 Industries Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>call_plan_call_report_ID__c</fullName>
        <externalId>true</externalId>
        <label>call plan call report ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_mo_dateTime_jazzy__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>last mo dateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Call Plan / Call Report</label>
    <listViews>
        <fullName>AH_1_My_Team_Call_Plan_This_Month</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>Plan_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>My_Area__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Creator_Profile__c</field>
            <operation>equals</operation>
            <value>SME-RM,SME-TM</value>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AH: 1. My Team Call Plan (This Month)</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AH_2_My_Team_Call_Report_This_Month</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Expected_Credit_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Call_Result_Activity__c</columns>
        <columns>Offer_Interest__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <filters>
            <field>Actual_Visit_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>My_Area__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Creator_Profile__c</field>
            <operation>equals</operation>
            <value>SME-RM,SME-TM</value>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AH: 2. My Team Call Report (This Month)</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AH_3_My_Team_Call_Plan</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>My_Area__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Creator_Profile__c</field>
            <operation>equals</operation>
            <value>SME-TM,SME-RM</value>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AH: 3. My Team Call Plan</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AH_4_My_Team_Call_Report</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Expected_Credit_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Call_Result_Activity__c</columns>
        <columns>Offer_Interest__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <filters>
            <field>My_Area__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Creator_Profile__c</field>
            <operation>equals</operation>
            <value>SME-RM,SME-TM</value>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AH: 4. My Team Call Report</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Call_Plan</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Customer_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <label>All Call Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_Admin</role>
            <role>SME_CEM_MS</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Call_Plan_T</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Port_Pool_Formula__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Customer_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>อติญา โพขำ</value>
        </filters>
        <label>All Call Plan T</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_Admin</role>
            <role>SME_CEM_MS</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Call_Plan_T1</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Port_Pool_Formula__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Customer_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>พานิชลือชาชัย</value>
        </filters>
        <label>All Call Plan T</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_Admin</role>
            <role>SME_CEM_MS</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Call_Plan_This_Week</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>Plan_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All Call Plan This Week</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_Admin</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Call_Report</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Expected_Credit_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Call_Result_Activity__c</columns>
        <columns>Offer_Interest__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Call Report</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_Admin</role>
            <role>SME_CEM_MS</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Call_Report_This_Week</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Plan_Date__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>Expected_Credit_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Non_Credit__c</columns>
        <columns>Call_Result_Activity__c</columns>
        <columns>Offer_Interest__c</columns>
        <columns>Team_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <filters>
            <field>Actual_Visit_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All Call Report This Week</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_Admin</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEM_1_My_Incomplete_Visit</fullName>
        <booleanFilter>1 AND 2  AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Who__c</columns>
        <columns>Accompanied_by_CEM_MS__c</columns>
        <columns>Accompanied_by_Executive__c</columns>
        <columns>Business_Knowledge_CEM__c</columns>
        <columns>Product_Explanation_CEM__c</columns>
        <columns>Non_Financial_Provides_CEM__c</columns>
        <columns>Final_Score_CEM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_me_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Accompanied_by_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business_Knowledge_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product_Explanation_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Non_Financial_Provides_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Final_Score_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Plan,Contacted</value>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CEM: 1. My Incomplete Visit</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_CEM_MS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEM_2_My_Complete_Visit</fullName>
        <booleanFilter>1 AND 2  AND ( 3 OR 4 OR 5 OR 6 OR 7) AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Who__c</columns>
        <columns>Accompanied_by_CEM_MS__c</columns>
        <columns>Accompanied_by_Executive__c</columns>
        <columns>Business_Knowledge_CEM__c</columns>
        <columns>Product_Explanation_CEM__c</columns>
        <columns>Non_Financial_Provides_CEM__c</columns>
        <columns>Final_Score_CEM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_me_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Accompanied_by_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business_Knowledge_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Product_Explanation_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Non_Financial_Provides_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Final_Score_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CEM: 2. My Complete Visit</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_CEM_MS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEM_3_All_Incomplete_Visit</fullName>
        <booleanFilter>1 AND 2  AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Who__c</columns>
        <columns>Accompanied_by_CEM_MS__c</columns>
        <columns>Accompanied_by_Executive__c</columns>
        <columns>Business_Knowledge_CEM__c</columns>
        <columns>Product_Explanation_CEM__c</columns>
        <columns>Non_Financial_Provides_CEM__c</columns>
        <columns>Final_Score_CEM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <filters>
            <field>Accompanied_by_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business_Knowledge_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product_Explanation_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Non_Financial_Provides_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Final_Score_CEM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CEM: 3. All Incomplete Visit</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_CEM_MS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEM_4_All_Complete_Visit</fullName>
        <booleanFilter>1 AND 2  AND ( 3 OR 4 OR 5 OR 6 OR 7) AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Who__c</columns>
        <columns>Accompanied_by_CEM_MS__c</columns>
        <columns>Accompanied_by_Executive__c</columns>
        <columns>Business_Knowledge_CEM__c</columns>
        <columns>Product_Explanation_CEM__c</columns>
        <columns>Non_Financial_Provides_CEM__c</columns>
        <columns>Final_Score_CEM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <filters>
            <field>Accompanied_by_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business_Knowledge_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Product_Explanation_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Non_Financial_Provides_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Final_Score_CEM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CEM: 4. All Complete Visit</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_CEM_MS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEM_5_My_Future_Plan</fullName>
        <booleanFilter>1 AND 2  AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Visit_Date__c</columns>
        <columns>Visit_Objective__c</columns>
        <columns>Who__c</columns>
        <columns>Accompanied_by_CEM_MS__c</columns>
        <columns>Accompanied_by_Executive__c</columns>
        <columns>Business_Knowledge_CEM__c</columns>
        <columns>Product_Explanation_CEM__c</columns>
        <columns>Non_Financial_Provides_CEM__c</columns>
        <columns>Final_Score_CEM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_me_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Accompanied_by_CEM_MS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>Primary_Call_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CEM: 5. My Future Plan</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_CEM_MS</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Call Plan / Call Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Plans / Call Reports</pluralLabel>
    <recordTypes>
        <fullName>CallPlan</fullName>
        <active>true</active>
        <label>Call Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>CallReport</fullName>
        <active>true</active>
        <description>with Call Plan section</description>
        <label>Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>CallReportNoPlan</fullName>
        <active>true</active>
        <description>Without Call Plan section</description>
        <label>Call Report (No Plan)</label>
    </recordTypes>
</CustomObject>